syntax = "proto3";

package erda.core.monitor.diagnotor;
option go_package = "github.com/erda-project/erda-proto-go/core/monitor/diagnotor/pb";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";
import "diagnotor.proto";

service DiagnotorAgentService {

  rpc ListTargetProcesses (ListTargetProcessesRequest) returns (ListTargetProcessesResponse) {
    option (google.api.http) = {
      get: "/api/diagnotor/processes"
    };
  }
  
}

message ListTargetProcessesRequest {
}

message ListTargetProcessesResponse {
  HostProcessStatus data = 1;
}
